<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:id="@+id/shareHistoryHeaderLayout"
    android:visibility="visible"
	android:background="@color/opa70white"
	android:padding="5dp">
 
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
	    android:textColor="@color/websiteHeader"
        android:layout_weight="0.2"
		android:layout_gravity="center_horizontal"  
		android:gravity="center_horizontal"    
		android:text="@string/sharedToLabel"	
     />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
	    android:textColor="@color/websiteHeader"
        android:layout_weight="0.2"
		android:layout_gravity="center_horizontal"  
		android:gravity="center_horizontal"
    	android:duplicateParentState="true" 
    	android:text="@string/player1Label"	  	
     />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
	    android:textColor="@color/websiteHeader"
        android:layout_gravity="center_horizontal"  
		android:gravity="center_horizontal"
        android:layout_weight="0.2"    
        android:text="@string/player2Label"	        
     />
    
     <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"  
		android:gravity="center_horizontal"
        android:textSize="14sp"
	    android:textColor="@color/websiteHeader"
        android:layout_weight="0.2"   
        android:text="@string/shareCountLabel"	            
     />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"  
		android:gravity="center_horizontal"
        android:textSize="14sp"
	    android:textColor="@color/websiteHeader"
        android:layout_weight="0.2"    
        android:text="@string/sharedDate"	          
     />
    
    
</LinearLayout>
