<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:id="@+id/receiveHeaderLayout"
    android:visibility="visible">
     <TextView
	        android:id="@+id/handTitle1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:textSize="14sp"
	        android:textColor="@color/mainHeader"
	        android:layout_weight="0.3"
	        android:text="@string/stroke"
	        android:layout_gravity="center_horizontal"   
	        android:gravity="center_horizontal"        
	     />
    
	    <TextView
	        android:id="@+id/destinationTitle1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:textSize="14sp"
	        android:textColor="@color/mainHeader"
	        android:layout_weight="0.3"
	        android:text="@string/destination"
	        android:layout_gravity="center_horizontal" 
	        android:gravity="center_horizontal"       
	     />
	    
	    <TextView
	        android:id="@+id/winShotTitle1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:textSize="14sp"
	        android:layout_weight="0.3"
	        android:textColor="@color/mainHeader"
	        android:layout_gravity="center_horizontal" 
	        android:gravity="center_horizontal" 
	        android:text="@string/winningshot"      
	     />
	     <TextView
	        android:id="@+id/countTitle1"
	        android:layout_width="0dp"
	        android:text="#"
	        android:layout_height="match_parent"
	        android:textSize="14sp"
	        android:textColor="@color/mainHeader"
	        android:layout_weight="0.1"
	        android:layout_gravity="center_horizontal" 
	        android:gravity="center_horizontal"   
     	/>
    
</LinearLayout>
